@@ -53,6 +53,7 @@ Changelog
  * Fix: Removing rich text links / documents now also works when the text selection is backwards (Thibaud Colas)
  * Fix: Prevent the rich text editor from crashing when copy-paste filtering removes all of its content (Thibaud Colas)
  * Fix: Page chooser now respects custom `get_admin_display_title` methods on parent page and breadcrumb (Haydn Greatnews)
+ * Fix: Added consistent whitespace around sortable table headings (Matt Westcott)
 
 
 2.4 (19.12.2018)
